--- a/venue/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/venue/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,10 @@
     "name": "svc.url.ticket",
     "type": "java.lang.String",
     "description": "A description for 'svc.url.ticket'"
+  },
+  {
+    "name": "spring.jpa.hibernate.dialect",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.jpa.hibernate.dialect'"
   }
 ]}
